# scrapper

./: .gitignore  README.md  install.bat  install.py  main.py  makefile  pyproject.toml  run.bat  run.sh  setup.py  setup_project.py
src/: __init__.py  main.py
